completed authentication flow
