# apps/auth-service/src/controller/auth.controller.ts
@@ -1,14 +1,19 @@
 import { Request, Response, NextFunction } from "express";
 import {
   checkOtpRestriction,
+  handleForgotPassword,
   sendOtp,
   trackOtpRequests,
   validateRegistrationData,
   verifyOtp,
+  verifyUserForgotPasswordOtp,
 } from "../utils/auth.helper";
 import prismaClient from "@packages/lib/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
 import bycript from "bcryptjs";
+import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // User Registration
 export const userRegistration = async (
@@ -74,5 +79,114 @@ export const verifyUser = async (
     });
   } catch (error) {
     return next(error);
+  }
+};
+
+// User login
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+    if (!email || !password) {
+      return next(new ValidationError("Email and password are required!"));
+    }
+    const user = await prismaClient.users.findUnique({ where: { email } });
+
+    if (!user) return next(new AuthError("User doesn`t exists!"));
+
+    // verify password
+    const isMatch = await bcrypt.compare(password, user.password!);
+    if (!isMatch) {
+      return next(new AuthError("Invalid email or password"));
+    }
+
+    // Generate access and refresh token
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      {
+        expiresIn: "15m",
+      }
+    );
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      {
+        expiresIn: "7d",
+      }
+    );
+
+    //store the refresh and access token in an httpOnly secure cookie
+    setCookie(res, "refresh_token", refreshToken);
+    setCookie(res, "access_token", accessToken);
+
+    res.status(200).json({
+      message: "Login successful!",
+      user: { id: user.id, email: user.email, name: user.name },
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+//Forgot Password
+
+export const userForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  await handleForgotPassword(req, res, next, "user");
+};
+
+// verify forgot password OTP
+export const verifyUserForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  await verifyUserForgotPasswordOtp(req, res, next);
+};
+
+// Reset User Password
+export const resetUserPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, newPassword } = req.body;
+
+    if (!email || !newPassword)
+      return next(new ValidationError("Email and new password are required!"));
+
+    const user = await prismaClient.users.findUnique({ where: { email } });
+    if (!user) return next(new ValidationError("User not found!"));
+
+    // compare new password with existing one
+    const isSamePassword = await bcrypt.compare(newPassword, user.password!);
+
+    if (isSamePassword) {
+      return next(
+        new ValidationError(
+          "New password cannot be the same as the old password!"
+        )
+      );
+    }
+
+    // hash to new password
+    const hashedPassword = await bcrypt.hash(newPassword, 10);
+
+    await prismaClient.users.update({
+      where: { email },
+      data: { password: hashedPassword },
+    });
+
+    res.status(200).json({ message: "Password reset successfully!" });
+  } catch (error) {
+    next(error);
   }
 };
