# apps/auth-service/src/routes/auth.router.ts
@@ -1,7 +1,18 @@
 import express, { Router } from "express";
-import { userRegistration, verifyUser } from "../controller/auth.controller";
+import {
+  loginUser,
+  resetUserPassword,
+  userForgotPassword,
+  userRegistration,
+  verifyUser,
+  verifyUserForgotPassword,
+} from "../controller/auth.controller";
 
 const router: Router = express.Router();
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login", loginUser);
+router.post("/forgot-user-password", userForgotPassword);
+router.post("/reset-user-password", resetUserPassword);
+router.post("/verify-forgot-password", verifyUserForgotPassword);
 export default router;
